// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RapmUtils RapmUtils - buildPlayerContext 1`] = `
Object {
  "avgEfficiency": 100,
  "colToPlayer": Array [
    "Wiggins, Aaron",
    "Cowan, Anthony",
    "Smith, Jalen",
    "Morsell, Darryl",
    "Ayala, Eric",
    "Scott, Donta",
    "Player, Other",
    "Data, Dummy",
  ],
  "defLineupPoss": 944,
  "numLineups": 5,
  "numPlayers": 8,
  "offLineupPoss": 959,
  "playerToCol": Object {
    "Ayala, Eric": 4,
    "Cowan, Anthony": 1,
    "Data, Dummy": 7,
    "Morsell, Darryl": 3,
    "Player, Other": 6,
    "Scott, Donta": 5,
    "Smith, Jalen": 2,
    "Wiggins, Aaron": 0,
  },
  "priorInfo": Object {
    "includeStrong": Object {},
    "noWeakPrior": false,
    "playersStrong": Array [
      Object {
        "off_adj_ppp": 4.5,
      },
      Object {
        "off_adj_ppp": 5,
      },
      Object {
        "off_adj_ppp": 0,
      },
      Object {
        "off_adj_ppp": 0,
      },
      Object {
        "off_adj_ppp": 0,
      },
      Object {
        "off_adj_ppp": 0,
      },
      Object {
        "off_adj_ppp": 0,
      },
      Object {
        "off_adj_ppp": 0,
      },
    ],
    "playersWeak": Array [
      Object {
        "def_adj_ppp": -4.5,
        "off_adj_ppp": 4.5,
      },
      Object {
        "def_adj_ppp": -5,
        "off_adj_ppp": 5,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
    ],
    "strongWeight": -1,
    "useRecursiveWeakPrior": false,
  },
  "removalPct": 0,
  "removedPlayers": Object {},
  "unbiasWeight": 0,
}
`;

exports[`RapmUtils RapmUtils - buildPlayerContext 2`] = `
Object {
  "avgEfficiency": 100,
  "colToPlayer": Array [
    "Wiggins, Aaron",
    "Cowan, Anthony",
    "Smith, Jalen",
    "Morsell, Darryl",
    "Ayala, Eric",
    "Scott, Donta",
  ],
  "defLineupPoss": 794,
  "numLineups": 3,
  "numPlayers": 6,
  "offLineupPoss": 809,
  "playerToCol": Object {
    "Ayala, Eric": 4,
    "Cowan, Anthony": 1,
    "Morsell, Darryl": 3,
    "Scott, Donta": 5,
    "Smith, Jalen": 2,
    "Wiggins, Aaron": 0,
  },
  "priorInfo": Object {
    "includeStrong": Object {},
    "noWeakPrior": false,
    "playersStrong": Array [
      Object {
        "off_adj_ppp": 4.5,
      },
      Object {
        "off_adj_ppp": 5,
      },
      Object {
        "off_adj_ppp": 0,
      },
      Object {
        "off_adj_ppp": 0,
      },
      Object {
        "off_adj_ppp": 0,
      },
      Object {
        "off_adj_ppp": 0,
      },
    ],
    "playersWeak": Array [
      Object {
        "def_adj_ppp": -4.5,
        "off_adj_ppp": 4.5,
      },
      Object {
        "def_adj_ppp": -5,
        "off_adj_ppp": 5,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
      },
    ],
    "strongWeight": -1,
    "useRecursiveWeakPrior": false,
  },
  "removalPct": 0.2,
  "removedPlayers": Object {
    "Data, Dummy": Array [
      0.05254860746190226,
      0.05254860746190226,
    ],
    "Player, Other": Array [
      0.1576458223857068,
      0.1576458223857068,
    ],
  },
  "unbiasWeight": 0,
}
`;
